@@ -1,3 +1,8 @@
+MP-2007-08-02-0: Bugfix:    If USER environment variable is not set,
+                            installation acts in unexpected ways.
+                 Issue:     137
+                 Review:    JG
+
 CR-2007-08-01-0: Enhancem.: Added new test for hedeby: show_status
                  Review:    TBD
 
